<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/aod_priority_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rg_title_priority"
        android:layout_centerHorizontal="true"
        />

    <RadioGroup
        android:id="@+id/aod_rg_priority"
        android:layout_below="@id/aod_priority_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >

        <RadioButton
            android:id="@+id/aod_rb_high_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_high"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/pr_high" />

        <RadioButton
            android:id="@+id/aod_rb_medium_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_medium"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/pr_medium" />

        <RadioButton
            android:id="@+id/aod_rb_low_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_low"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:checked="true"
            android:contentDescription="@string/pr_low" />
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/aod_order_text_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/aod_rg_priority"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentStart="true">
            <EditText
                android:id="@+id/aod_input_order_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:hint="@string/eh_enter_order_name"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />
            <EditText
                android:id="@+id/aod_input_customer_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/aod_input_order_name"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:hint="@string/eh_enter_customer_name"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true">

        <ImageButton
            android:id="@+id/aod_microphone_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dialog_microphone_button"
            android:contentDescription="@string/microphone_description"
            android:background="@color/transparent"
            android:layout_marginEnd="14dp" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/aod_order_txt_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_enter_end_date"
        android:layout_below="@id/aod_order_text_layout"
        android:layout_centerHorizontal="true"/>

    <DatePicker
        android:id="@+id/aod_end_order_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aod_order_txt_end_date"
        style="@android:style/Widget.DatePicker"
        android:layout_centerHorizontal="true"
        android:scrollbarSize="10dp"/>

    <RelativeLayout
        android:id="@+id/aod_order_button_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/aod_end_order_date"
        android:layout_centerInParent="true"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/aod_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/txt_cancel_button"
            android:src="@drawable/dialog_cancel_button"
            android:background="@color/transparent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="69dp" />

        <ImageButton
            android:id="@+id/aod_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/txt_ok_button"
            android:src="@drawable/dialog_ok_button"
            android:background="@color/transparent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="69dp" />

    </RelativeLayout>


</RelativeLayout>