<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:background="@color/light_gray"
    android:stretchColumns="*"
    >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/header_eoir_npp"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:text="@string/npp"
            android:layout_marginLeft="3dp" />

        <TextView
            android:id="@+id/header_eoir_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/header_item_name"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/header_eoir_amount"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/header_item_amount"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/header_eoir_discount"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/header_item_discount"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/header_eoir_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_item_price"
            android:textSize="12sp"
            android:layout_gravity="center" />
    </TableRow>

</TableLayout>