<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:tag="back"
        android:background="@color/order_list_back_bg"
        android:gravity="center_horizontal">

        <ImageButton
            android:id="@+id/swipe_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/edit_button"
            android:background="@color/transparent"
            android:contentDescription="@string/edit"
            android:layout_marginRight="10dp" />

        <ImageButton
            android:id="@+id/swipe_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/delete_button"
            android:background="@color/transparent"
            android:contentDescription="@string/delete"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/front"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:tag="front"
        android:background="@color/white"
        android:padding="8dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/row_priority_img"
            android:contentDescription="@string/pr_low"
            android:src="@mipmap/priority_low"
            android:layout_alignTop="@+id/row_end_date"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/row_order_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_orders_name"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/row_priority_img"
            android:layout_marginLeft="5dp" />

        <TextView
            android:id="@+id/row_customer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_customers_name"
            android:layout_below="@+id/row_order_name"
            android:layout_alignStart="@+id/row_order_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/row_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_date_of_end"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_above="@+id/row_creation_date"
            android:layout_alignEnd="@+id/row_creation_date" />

        <TextView
            android:id="@+id/row_creation_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_date_of_creation"
            android:layout_alignTop="@+id/row_customer_name"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_total_price"
            android:id="@+id/row_txt_total_price"
            android:layout_below="@+id/row_customer_name"
            android:layout_alignStart="@+id/row_customer_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_zero"
            android:id="@+id/row_number_total_price"
            android:textStyle="bold"
            android:layout_below="@+id/row_customer_name"
            android:layout_toEndOf="@+id/row_txt_total_price"
            android:layout_marginLeft="5dp"
            android:textSize="15sp" />

    </RelativeLayout>

</FrameLayout>