<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foreground="#dcdcdc">


        <TextView
            android:id="@+id/txtEditOrderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/edit"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_find_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/edit_search_button"
            android:layout_alignBottom="@+id/edit_search_button"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:hint="@string/find_by_code"
            android:inputType="number" />

        <Button
            android:id="@+id/edit_search_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtEditOrderName"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/edit_find_code"
            android:background="@mipmap/ic_search"
            android:contentDescription="@string/search_by_code" />


        <Button
            android:id="@+id/edit_add_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txtEditOrderName"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@mipmap/ic_add_list"
            android:visibility="invisible" />


        <TextView
            android:id="@+id/txtEditItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/edit_find_code"
            android:layout_below="@+id/edit_search_button"
            android:layout_marginTop="25dp"
            android:layout_toStartOf="@+id/edit_search_button"
            android:text="@string/header_item_name"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/edit_item_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtEditItemName"
            android:layout_alignStart="@+id/edit_search_button"
            android:ems="3"
            android:gravity="right"
            android:hint="@string/number_one"
            android:inputType="number"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/edit_item_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/edit_item_amount"
            android:layout_marginLeft="20dp"
            android:layout_toEndOf="@+id/edit_item_amount"
            android:ems="2"
            android:gravity="right"
            android:hint="@string/number_zero"
            android:inputType="number"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/edit_percent_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/edit_item_discount"
            android:layout_alignBottom="@+id/edit_item_discount"
            android:layout_toEndOf="@+id/edit_item_discount"
            android:text="@string/percent_sign"
            android:visibility="invisible" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_item_amount"
            android:layout_above="@+id/order_commercial">
            <ListView
                android:id="@+id/edit_order_lv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                />
        </RelativeLayout>



    <LinearLayout
        android:id="@+id/order_commercial"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/commerce_bg"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/commerce_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Commerce"
            android:textSize="44sp" />
    </LinearLayout>


</RelativeLayout>